--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -6,193 +6,224 @@ Robotix Club • About Us
 {% endblock %}
 
 {% block content %}
-		  <img src='{% static "assets/img/dots.png" %}' class="dots">
-		  <img src='{% static "assets/img/path4.png" %}' class="path">
+<img src='{% static "assets/img/dots.png" %}' class="dots">
+<img src='{% static "assets/img/path4.png" %}' class="path">
 
-		  <section class="section section-lg">
-			  <section class="container"><br><br>
-				 <div class="row"><br>
-					<div class="page-head-title">
-						<h5 class="page-title-sim">About</h5>
-					  </div><br>
-				  <div class="col-lg-12 col-md-12"><br>
-					  <h2 class="text-info"><strong>Who are we ??</strong></h2>
-					  <p class="text-white h5">The Robotix Club of NIT Raipur is the perfect combination of innovators, contributors and experts in the field of Robotics. The club has been inspiring minds ever since its inception in 2014.<br>
-					   The foundation of Robotix Club was laid by a group of enthusiastic and ardent students with a vision to promote the versatile field of robotics and it’s ever growing application in present time.<br>
-					   We make sure that every student seeking the knowledge gets it .The club is guided by our esteemed faculty In charge Dr. Rajesh Doriya (Department of Information Technology) who makes sure there is proper functioning of the club.
-					  </p><br><br>
-				  </div>
+<section class="section section-lg">
+	<section class="container"><br><br>
+		<div class="row"><br>
+			<div class="page-head-title">
+				<h5 class="page-title-sim">About</h5>
+			</div><br>
+			<div class="col-lg-12 col-md-12"><br>
+				<h2 class="text-info"><strong>Who are we ??</strong></h2>
+				<p class="text-white h5">The Robotix Club of NIT Raipur is the perfect combination of innovators,
+					contributors and experts in the field of Robotics. The club has been inspiring minds ever since its
+					inception in 2014.<br>
+					The foundation of Robotix Club was laid by a group of enthusiastic and ardent students with a vision
+					to promote the versatile field of robotics and it’s ever growing application in present time.<br>
+					We make sure that every student seeking the knowledge gets it .The club is guided by our esteemed
+					faculty In charge Dr. Rajesh Doriya (Department of Information Technology) who makes sure there is
+					proper functioning of the club.
+				</p><br><br>
+			</div>
 
-				  <div class="col-lg-12 col-md-12"><br>
-					  <h2 class="text-info"><strong>Our Vision</strong></h2>
-					  <p class="text-white h5">Robotix Club NITRR strives to develop technological skills in the diverse field of mechatronics and robotics by transcending the theoretical knowledge into live application and providing live simple yet creative solution for real world complex problems.
-						  <br>The club's focus has always been on student specific events and workshops to increase the reach of robotics in the college. Major part of the club has been involved with students as well as teachers working together as a cohesive unit.
-					  </p>
-				  </div>
-				</div>
-			  </section>
-			</section>
-			<img src='{% static "assets/img/path4.png" %}' class="path">
-		  <section class="section section-lg">
-			<div class="container">
-			  <div class="row">
-				  <div class="col-lg-4 col-md-4">
-					  <h2 class="text-info"><strong>What do we do ??</strong></h2>
-						  <p class="text-white h5">Kick-starting its journey with a workshop on manual robotics to now providing insight to most advanced topics like Artificial Intelligence.
-						  <br>The club has been through a remarkable journey and it continues to inspire the students to explore the discipline of Robotics.
-						  <br>The club conducts regular workshops and competitions to advance robotics in college.
-						  <br>The workshops include free workshops as well as paid workshops where students get to know everything, from the basics of robotics to advance mechanisms of robotics.
-					  </p><br><br>
-				  </div>
+			<div class="col-lg-12 col-md-12"><br>
+				<h2 class="text-info"><strong>Our Vision</strong></h2>
+				<p class="text-white h5">Robotix Club NITRR strives to develop technological skills in the diverse field
+					of mechatronics and robotics by transcending the theoretical knowledge into live application and
+					providing live simple yet creative solution for real world complex problems.
+					<br>The club's focus has always been on student specific events and workshops to increase the reach
+					of robotics in the college. Major part of the club has been involved with students as well as
+					teachers working together as a cohesive unit.
+				</p>
+			</div>
+		</div>
+	</section>
+</section>
+<img src='{% static "assets/img/path4.png" %}' class="path">
+<section class="section section-lg">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4 col-md-4">
+				<h2 class="text-info"><strong>What do we do ??</strong></h2>
+				<p class="text-white h5">Kick-starting its journey with a workshop on manual robotics to now providing
+					insight to most advanced topics like Artificial Intelligence.
+					<br>The club has been through a remarkable journey and it continues to inspire the students to
+					explore the discipline of Robotics.
+					<br>The club conducts regular workshops and competitions to advance robotics in college.
+					<br>The workshops include free workshops as well as paid workshops where students get to know
+					everything, from the basics of robotics to advance mechanisms of robotics.
+				</p><br><br>
+			</div>
 
-				  <div class="col-lg-8 col-md-8 text-center">
-					  <h2 class="text-info"><strong>Our Domains</strong></h2>
-						<ul class="nav nav-pills nav-pills-info align-items-center">
-								   <li class="nav-item h5">
-								   <a class="nav-link active" data-toggle="tab" href="#link1" data-toggle="tab">Public Relations & Marketing</a>
-								   </li>
-								   <li class="nav-item h5">
-								   <a class="nav-link" data-toggle="tab" href="#link2" data-toggle="tab">Sponsorship</a>
-								   </li>
-								   <li class="nav-item h5">
-								   <a class="nav-link" data-toggle="tab" href="#link3" data-toggle="tab">Graphic & Web Design</a>
-								   </li>
-								   <li class="nav-item h5">
-								   <a class="nav-link" data-toggle="tab" href="#link4" data-toggle="tab">Documentation</a>
-								   </li>
-						</ul>
-						<div class="card" >
-								<div class="card-body">
-								  <div class="tab-content tab-space text-center">
-									  <div class="tab-pane active h5" id="link1">
-									  <!--<h4 class="text-center text-info" ><strong>PR & Marketing</strong></h4>-->
-									  This club has a very fine and responsible team of<br> Public Relations & Marketing.<br>
-									  They are responsible for planning and organizing the events <br>with attention to public, financial and time constraints.<br>
-									  They book venues and schedule speakers, meet with clients<br> and coordinate with them regularly.
-									 </div>
-									 <div class="tab-pane  h5" id="link2">
-									   <!--<h4 class="text-center text-info" ><strong>Sponsorship</strong></h4>-->
-									   Many people can sell, but not everyone is comfortable<br> selling what doesn't exist.<br>
-									   This club is lucky to have the members who have strong<br> ideation sense, are innovative and have speaking and<br> conversational skills.
-									   <br>They have great interest in marketing and business world.
-									 </div>
-									 <div class="tab-pane h5" id="link3">
-									   <!--<h4 class="text-center text-info" ><strong>Graphic & Web Design</strong></h4>-->
-									   You can’t use up creativity.<br> The more you use, the more you have.<br>
-									   It is said that Design is intelligence made visible.<br>
-									   Robotix club has a dedicated and creative<br> team of members in this domain.
-									 </div>
-									 <div class="tab-pane h5" id="link4">
-										<!--<h4 class="text-center text-info" ><strong>Documentation</strong></h4>-->
-										It is said that the words can be like X-rays if you use them<br> properly, they'll go through anything.<br>
-										You read and you're pierced.<br>
-										So last but not the least, we have a magnificent and<br> outstanding set of members in documentation team who are responsible for all the excellent content.
-									 </div>
-								  </div>
-
-								</div>
+			<div class="col-lg-8 col-md-8 text-center">
+				<h2 class="text-info"><strong>Our Domains</strong></h2>
+				<ul class="nav nav-pills nav-pills-info align-items-center">
+					<li class="nav-item h5">
+						<a class="nav-link active" data-toggle="tab" href="#link1" data-toggle="tab">Public Relations &
+							Marketing</a>
+					</li>
+					<li class="nav-item h5">
+						<a class="nav-link" data-toggle="tab" href="#link2" data-toggle="tab">Sponsorship</a>
+					</li>
+					<li class="nav-item h5">
+						<a class="nav-link" data-toggle="tab" href="#link3" data-toggle="tab">Graphic & Web Design</a>
+					</li>
+					<li class="nav-item h5">
+						<a class="nav-link" data-toggle="tab" href="#link4" data-toggle="tab">Documentation</a>
+					</li>
+				</ul>
+				<div class="card">
+					<div class="card-body">
+						<div class="tab-content tab-space text-center">
+							<div class="tab-pane active h5" id="link1">
+								<!--<h4 class="text-center text-info" ><strong>PR & Marketing</strong></h4>-->
+								This club has a very fine and responsible team of<br> Public Relations & Marketing.<br>
+								They are responsible for planning and organizing the events <br>with attention to
+								public, financial and time constraints.<br>
+								They book venues and schedule speakers, meet with clients<br> and coordinate with them
+								regularly.
+							</div>
+							<div class="tab-pane  h5" id="link2">
+								<!--<h4 class="text-center text-info" ><strong>Sponsorship</strong></h4>-->
+								Many people can sell, but not everyone is comfortable<br> selling what doesn't
+								exist.<br>
+								This club is lucky to have the members who have strong<br> ideation sense, are
+								innovative and have speaking and<br> conversational skills.
+								<br>They have great interest in marketing and business world.
+							</div>
+							<div class="tab-pane h5" id="link3">
+								<!--<h4 class="text-center text-info" ><strong>Graphic & Web Design</strong></h4>-->
+								You can’t use up creativity.<br> The more you use, the more you have.<br>
+								It is said that Design is intelligence made visible.<br>
+								Robotix club has a dedicated and creative<br> team of members in this domain.
+							</div>
+							<div class="tab-pane h5" id="link4">
+								<!--<h4 class="text-center text-info" ><strong>Documentation</strong></h4>-->
+								It is said that the words can be like X-rays if you use them<br> properly, they'll go
+								through anything.<br>
+								You read and you're pierced.<br>
+								So last but not the least, we have a magnificent and<br> outstanding set of members in
+								documentation team who are responsible for all the excellent content.
+							</div>
 						</div>
+
+					</div>
 				</div>
-			  </div>
-			  </div>
-			 <br>
-		  </section>
+			</div>
+		</div>
+	</div>
+	<br>
+</section>
 
-			<section class="section">
-		    <div class="container">
-		      <div class="row">
-		          <img src='{% static "assets/img/cercuri.png" %}' class="shapes circle">
-		          <div class="page-head-title" id="ourteam">
-		             <h5 class="page-title-sim">Our Team</h5>
-		          </div>
-		      </div>
-		      <h1 class="text-info"><strong>Converners</strong></h1>
-		      <div class="row">
-						{% for obj in Convenor %}
-		        <div class="col-xs-3 col-sm-3">
+<section class="section">
+	<div class="container">
+		<div class="row">
+			<img src='{% static "assets/img/cercuri.png" %}' class="shapes circle">
+			<div class="page-head-title" id="ourteam">
+				<h5 class="page-title-sim">Our Team</h5>
+			</div>
+		</div>
+		<h1 class="text-info"><strong>Converners</strong></h1>
+		<div class="row">
+			{% for obj in Convenor %}
+			<div class="col-xs-3 col-sm-3">
 
-		          <div class="team-member" align="center">
+				<div class="team-member" align="center">
 
-		          										<!-- Image -->
-		          										<img class="img-responsive" src='{{obj.photo.url}}' alt="">
-		          										<!-- Name -->
-		          										<h4>{{obj.name}}</h4>
-		          										<span class="deg">{{obj.branch}}</span><br>
-		                              <span class="deg">
-		          										<a href="{{obj.fb_id}}" target="_blank"><img src='{% static "assets/img/fb.png" %}' width="25" height="25" title="{{obj.name}}"></a>
-		              									<a href="mailto:{{obj.mail_id}}" target="_blank"><img src='{% static "assets/img/mail.png" %}' width="30" height="30" title="{{obj.mail_id}}"></a>
-		          										<a href="tel:+91{{obj.phone}}" target="_blank"><img src='{% static "assets/img/phone.png" %}' width="25" height="25" title="+91{{obj.phone}}"></a>
-		          										</span>
+					<!-- Image -->
+					<img class="img-responsive" src='{{obj.photo.url}}' alt="">
+					<!-- Name -->
+					<h4>{{obj.name}}</h4>
+					<span class="deg">{{obj.branch}}</span><br>
+					<span class="deg">
+						<a href="{{obj.fb_id}}" target="_blank"><img src='{% static "assets/img/fb.png" %}' width="25"
+								height="25" title="{{obj.name}}"></a>
+						<a href="mailto:{{obj.mail_id}}" target="_blank"><img src='{% static "assets/img/mail.png" %}'
+								width="30" height="30" title="{{obj.mail_id}}"></a>
+						<a href="tel:+91{{obj.phone}}" target="_blank"><img src='{% static "assets/img/phone.png" %}'
+								width="25" height="25" title="+91{{obj.phone}}"></a>
+					</span>
 
-		          </div>
-		        </div>
-							{% endfor %}
-		        <br>
-		      </div>
-		      <h1 class="text-info"><strong>Managers</strong></h1>
-		      <div class="row" align="center">
-							{% for obj in Manager %}
-		        <div class="col-xs-3 col-sm-3">
+				</div>
+			</div>
+			{% endfor %}
+			<br>
+		</div>
+		<h1 class="text-info"><strong>Managers</strong></h1>
+		<div class="row" align="center">
+			{% for obj in Manager %}
+			<div class="col-xs-3 col-sm-3">
 
-		        <div class="team-member" align="center">
+				<div class="team-member" align="center">
 
-		                  <h4>{{obj.name}}</h4>
-		                  <span class="deg">{{obj.branch}}</span><br>
-		                  <span class="deg">
-		                  <a href="{{obj.fb_id}}" target="_blank"><img src='{% static "assets/img/fb.png" %}' width="20" height="20" title="{{obj.name}}"></a>
-		                    <a href="{{obj.mail_id}}" target="_blank"><img src='{% static "assets/img/mail.png" %}' width="25" height="25" title="{{obj.mail_id}}"></a>
-		                  <a href="tel:+91{{obj.phone}}" target="_blank"><img src='{% static "assets/img/phone.png" %}' width="20" height="20" title="+91{{obj.phone}}"></a>
-		                  </span>
+					<h4>{{obj.name}}</h4>
+					<span class="deg">{{obj.branch}}</span><br>
+					<span class="deg">
+						<a href="{{obj.fb_id}}" target="_blank"><img src='{% static "assets/img/fb.png" %}' width="20"
+								height="20" title="{{obj.name}}"></a>
+						<a href="{{obj.mail_id}}" target="_blank"><img src='{% static "assets/img/mail.png" %}'
+								width="25" height="25" title="{{obj.mail_id}}"></a>
+						<a href="tel:+91{{obj.phone}}" target="_blank"><img src='{% static "assets/img/phone.png" %}'
+								width="20" height="20" title="+91{{obj.phone}}"></a>
+					</span>
 
-		        </div>
+				</div>
 
-		        </div>
-						{% endfor %}
-		      </div>
-		      <h1 class="text-info"><strong>Coordinators</strong></h1>
-		      <div class="row">
-						{% for obj in Cord %}
-		        <div class="col-xs-3 col-sm-3" align="center">
+			</div>
+			{% endfor %}
+		</div>
+		<h1 class="text-info"><strong>Coordinators</strong></h1>
+		<div class="row">
+			{% for obj in Cord %}
+			<div class="col-xs-3 col-sm-3" align="center">
 
-									<div class="team-member">
+				<div class="team-member">
 
-												<h4>{{obj.name}}</h4>
-												<span class="deg">{{obj.branch}}</span><br>
+					<h4>{{obj.name}}</h4>
+					<span class="deg">{{obj.branch}}</span><br>
 
-												<span class="deg">
-												<a href="{{obj.fb_id}}" target="_blank"><img src='{% static "assets/img/fb.png" %}' width="20" height="20" title="{{obj.name}}"></a>
-		    									<a href="mailto:{{obj.mail_id}}" target="_blank"><img src='{% static "assets/img/mail.png" %}' width="25" height="25" title="{{obj.mail_id}}"></a>
-												<a href="tel:+91{{obj.phone}}" target="_blank"><img src='{% static "assets/img/phone.png" %}' width="20" height="20" title="+91{{obj.phone}}"></a>
-												</span>
+					<span class="deg">
+						<a href="{{obj.fb_id}}" target="_blank"><img src='{% static "assets/img/fb.png" %}' width="20"
+								height="20" title="{{obj.name}}"></a>
+						<a href="mailto:{{obj.mail_id}}" target="_blank"><img src='{% static "assets/img/mail.png" %}'
+								width="25" height="25" title="{{obj.mail_id}}"></a>
+						<a href="tel:+91{{obj.phone}}" target="_blank"><img src='{% static "assets/img/phone.png" %}'
+								width="20" height="20" title="+91{{obj.phone}}"></a>
+					</span>
 
-									</div>
+				</div>
 
-									</div>
-								{% endfor %}
-		      </div>
-		      <h1 class="text-info"><strong>Recruits</strong></h1>
-		      <div class="row">
-						{% for obj in Recruits %}
-		        <div class="col-xs-3 col-sm-3" align="center">
+			</div>
+			{% endfor %}
+		</div>
+		<h1 class="text-info"><strong>Recruits</strong></h1>
+		<div class="row">
+			{% for obj in Recruits %}
+			<div class="col-xs-3 col-sm-3" align="center">
 
-		              <div class="team-member">
+				<div class="team-member">
 
-										<h4>{{obj.name}}</h4>
-										<span class="deg">{{obj.branch}}</span><br>
+					<h4>{{obj.name}}</h4>
+					<span class="deg">{{obj.branch}}</span><br>
 
-										<span class="deg">
-										<a href="{{obj.fb_id}}" target="_blank"><img src='{% static "assets/img/fb.png" %}' width="20" height="20" title="{{obj.name}}"></a>
-											<a href="mailto:{{obj.mail_id}}" target="_blank"><img src='{% static "assets/img/mail.png" %}' width="25" height="25" title="{{obj.mail_id}}"></a>
-										<a href="tel:+91{{obj.phone}}" target="_blank"><img src='{% static "assets/img/phone.png" %}' width="20" height="20" title="+91{{obj.phone}}"></a>
-										</span>
+					<span class="deg">
+						<a href="{{obj.fb_id}}" target="_blank"><img src='{% static "assets/img/fb.png" %}' width="20"
+								height="20" title="{{obj.name}}"></a>
+						<a href="mailto:{{obj.mail_id}}" target="_blank"><img src='{% static "assets/img/mail.png" %}'
+								width="25" height="25" title="{{obj.mail_id}}"></a>
+						<a href="tel:+91{{obj.phone}}" target="_blank"><img src='{% static "assets/img/phone.png" %}'
+								width="20" height="20" title="+91{{obj.phone}}"></a>
+					</span>
 
-		              </div>
+				</div>
 
-		              </div>
-		      </div>
-					{% endfor %}
+			</div>
+		</div>
+		{% endfor %}
 
-		    </div>
-		  </section>
+	</div>
+</section>
 
 {% endblock %}
