--- a/templates/complete-profile.html
+++ b/templates/complete-profile.html
@@ -6,20 +6,20 @@ Robotix Club • Complete Profile
 {% endblock %}
 
 {% block content %}
-    <img src='{% static "assets/img/dots.png" %}' class="dots">
-    <img src='{% static "assets/img/path4.png" %}' class="path">
-  <!-- End Navbar -->
-  <div class="wrapper">
-    <div class="page-header">
-      <div class="content">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12 col-md-12">
-              <div id="square7" class="square square-7"></div>
-              <div id="square8" class="square square-8"></div>
-              <div class="card card-register" >
-                <form name="myform" action="" method="POST">
-                  {% csrf_token %}
+<img src='{% static "assets/img/dots.png" %}' class="dots">
+<img src='{% static "assets/img/path4.png" %}' class="path">
+<!-- End Navbar -->
+<div class="wrapper">
+  <div class="page-header">
+    <div class="content">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 col-md-12">
+            <div id="square7" class="square square-7"></div>
+            <div id="square8" class="square square-8"></div>
+            <div class="card card-register">
+              <form name="myform" action="" method="POST">
+                {% csrf_token %}
                 <div class="card-header">
                   <img class="card-img" src='{% static "assets/img/square1.png" %}' alt="Card image">
                   <h4 class="card-title" style="color:#dadada">&nbsp;Complete Profile Details</h4>
@@ -73,29 +73,31 @@ Robotix Club • Complete Profile
                         <input class="form-check-input" type="checkbox" id="chkbox" required>
                         <span class="form-check-sign"></span>
                         I agree to the
-                        <a href='{% static "termsandconditions.txt" %}' class="text-info" id="checkbox" download>terms and conditions</a>
+                        <a href='{% static "termsandconditions.txt" %}' class="text-info" id="checkbox" download>terms
+                          and conditions</a>
 
                       </label>
                     </div>
                 </div>
                 <div class="card-footer text-center">
-                  <button type="submit" onclick="" name='complete' href="" class="btn btn-info btn-round btn-lg">Submit</button>
+                  <button type="submit" onclick="" name='complete' href=""
+                    class="btn btn-info btn-round btn-lg">Submit</button>
                 </div>
-               </form>
-             </div>
-           </div>
+              </form>
+            </div>
+          </div>
 
 
-        </div>
-        </div>
-          <div id="square1" class="square square-1"></div>
-          <div id="square2" class="square square-2"></div>
-          <div id="square3" class="square square-3"></div>
-          <div id="square4" class="square square-4"></div>
-          <div id="square5" class="square square-5"></div>
-          <div id="square6" class="square square-6"></div>
         </div>
       </div>
-    <br>
+      <div id="square1" class="square square-1"></div>
+      <div id="square2" class="square square-2"></div>
+      <div id="square3" class="square square-3"></div>
+      <div id="square4" class="square square-4"></div>
+      <div id="square5" class="square square-5"></div>
+      <div id="square6" class="square square-6"></div>
+    </div>
   </div>
+  <br>
+</div>
 {% endblock %}
