--- a/templates/index.html
+++ b/templates/index.html
@@ -6,160 +6,186 @@ Robotix Club • Home
 {% endblock %}
 
 {% block content %}
-  <section class="section">
-   <div class="page-header">
-     <img src='{% static "assets/img/banner.png" %}' class="img-fluid" width="100%">
+<section class="section">
+  <div class="page-header">
+    <img src='{% static "assets/img/banner.png" %}' class="img-fluid" width="100%">
     <div class="content-center">
-        <div class="row row-grid justify-content-between align-items-center text-left">
-          <div class="col-lg-5 col-md-5">
-            <h1 class="text-white" style="font-size: 40px;"><strong>ROBOTiX Club</strong></h1>
-            <h4 class="text-primary">National Institue of Technology, Raipur</h4>
-            <p class="text-white mb-3">We, Robotix Club of NIT Raipur, constitute enthusiasts and experts in the field of robotics who deal with the application of robotics in real life situations....</p>
-            <div class="btn-wrapper">
-              <div class="button-container">
-                <a target="_blank" href="https://www.instagram.com/robotix_nitrr" class="btn btn-icon btn-primary btn-round btn-simple" data-toggle="tooltip" data-placement="bottom" data-original-title="Follow us" target="_blank">
-                  <i class="fab fa-instagram"></i>
-                </a>
-                <a target="_blank" href="https://www.facebook.com/nitrrobots16/" class="btn btn-icon btn-primary btn-round btn-simple" data-toggle="tooltip" data-placement="bottom" data-original-title="Follow us" target="_blank">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-                <a target="_blank" href="https://in.linkedin.com/company/robotix-club-nit-raipur" class="btn btn-icon btn-primary  btn-round btn-simple" data-toggle="tooltip" data-placement="bottom" data-original-title="Follow us" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a target="_blank" href="mailto:robotixclub@nitrr.ac.in" class="btn btn-icon btn-primary btn-round btn-simple" data-toggle="tooltip" data-placement="bottom" data-original-title="Mail us" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
+      <div class="row row-grid justify-content-between align-items-center text-left">
+        <div class="col-lg-5 col-md-5">
+          <h1 class="text-white" style="font-size: 40px;"><strong>ROBOTiX Club</strong></h1>
+          <h4 class="text-primary">National Institue of Technology, Raipur</h4>
+          <p class="text-white mb-3">We, Robotix Club of NIT Raipur, constitute enthusiasts and experts in the field of
+            robotics who deal with the application of robotics in real life situations....</p>
+          <div class="btn-wrapper">
+            <div class="button-container">
+              <a target="_blank" href="https://www.instagram.com/robotix_nitrr"
+                class="btn btn-icon btn-primary btn-round btn-simple" data-toggle="tooltip" data-placement="bottom"
+                data-original-title="Follow us" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a target="_blank" href="https://www.facebook.com/nitrrobots16/"
+                class="btn btn-icon btn-primary btn-round btn-simple" data-toggle="tooltip" data-placement="bottom"
+                data-original-title="Follow us" target="_blank">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a target="_blank" href="https://in.linkedin.com/company/robotix-club-nit-raipur"
+                class="btn btn-icon btn-primary  btn-round btn-simple" data-toggle="tooltip" data-placement="bottom"
+                data-original-title="Follow us" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a target="_blank" href="mailto:robotixclub@nitrr.ac.in"
+                class="btn btn-icon btn-primary btn-round btn-simple" data-toggle="tooltip" data-placement="bottom"
+                data-original-title="Mail us" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-5">
+        </div>
+      </div>
+    </div>
+    <img src='{% static "assets/img/path2.png" %}' class="path2">
+
+    <img src='{% static "assets/img/cercuri.png" %}' class="shapes circle">
+  </div>
+  <img src='{% static "assets/img/path4.png" %}' class="path">
+  <div class="container">
+    <img src='{% static "assets/img/triunghiuri.png" %}' class="shapes triangle">
+    <div class="row">
+      <div class="col-md-12">
+        <hr class="line-primary">
+        <h1>ROBOTiX Club -
+          <span class="text-primary"> NIT Raipur</span>
+          <p class="text-white h5">
+            <br>The Club is focused on the development of the students in the field of robotics.
+            <br>From a machine designed for lifting metal scraps to Robots capable of human interaction, we have come a
+            long way.
+            <br>The main function of our club is to organise workshops, exhibitions and competitions for the students to
+            showcase their talent and to identify their interests in this field.
+            <br>Our main aim is to provide the resources and knowledge to any robotics enthusiast for their development
+            in this field.
+          </p>
+        </h1>
+      </div>
+    </div>
+    <br>
+    <div class="row justify-content-center">
+      <div class="col-md-12">
+        <div class="card card-coin card-plain">
+          <br><br><br><br><br><br>
+          <div class="card-header">
+            <img src='{% static "assets/img/amrawani.png" %}' class="img-center img-fluid">
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <h4 class="text-uppercase">Dr. A M Rawani</h4>
+                <span>Director - NIT Raipur</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <hr class="line-primary"><br>
+                <p class="text-white h5">
+                  The Institute is committed to the challenging task of development of technical education by
+                  preparing<br> seasoned graduates in highly sophisticated field of engineering and technology.
+                  <br>Development of India as an emerging industrial power is a demanding exercise as it involves the
+                  combination of<br> cost effectiveness and efficiency along with producing world-class technology at
+                  the cutting edge.
+                  <br>For about five decades we have been doing it with sincerity and commitment at NIT Raipur.
+                </p>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-5">
+          <hr class="line-primary">
+          <div class="card-footer text-center">
+            <a href="http://www.nitrr.ac.in" target="_blank" class="btn btn-primary btn-simple">Contact</a>
           </div>
         </div>
       </div>
-      <img src='{% static "assets/img/path2.png" %}' class="path2">
-
-      <img src='{% static "assets/img/cercuri.png" %}' class="shapes circle">
     </div>
-          <img src='{% static "assets/img/path4.png" %}' class="path">
-        <div class="container">
-            <img src='{% static "assets/img/triunghiuri.png" %}' class="shapes triangle">
-          <div class="row">
-            <div class="col-md-12">
-              <hr class="line-primary">
-              <h1>ROBOTiX Club -
-                <span class="text-primary"> NIT Raipur</span>
+  </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-12">
+        <div class="card card-coin card-plain">
+          <br><br><br><br><br><br>
+          <div class="card-header">
+            <img src='{% static "assets/img/SBajpai.jpg" %}' class="img-center img-fluid">
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <h4 class="text-uppercase">Dr. Samir Bajpai</h4>
+                <span>Career Development Cell (Head) - NIT Raipur</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <hr class="line-primary"><br>
                 <p class="text-white h5">
-					         <br>The Club is focused on the development of the students in the field of robotics.
-                   <br>From a machine designed for lifting metal scraps to Robots capable of human interaction, we have come a long way.
-					         <br>The main function of our club is to organise workshops, exhibitions and competitions for the students to showcase their talent and to identify their interests in this field.
-					         <br>Our main aim is to provide the resources and knowledge to any robotics enthusiast for their development in this field.</p>
-              </h1>
-            </div>
-          </div>
-          <br>
-          <div class="row justify-content-center">
-            <div class="col-md-12">
-              <div class="card card-coin card-plain">
-                <br><br><br><br><br><br>
-                <div class="card-header">
-                  <img src='{% static "assets/img/amrawani.png" %}' class="img-center img-fluid">
-                </div>
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                      <h4 class="text-uppercase">Dr. A M Rawani</h4>
-                      <span>Director - NIT Raipur</span>
-                  </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                      <hr class="line-primary"><br>
-                    <p class="text-white h5">
-                            The Institute is committed to the challenging task of development of technical education by preparing<br> seasoned graduates in highly sophisticated field of engineering and technology.
-						            <br>Development of India as an emerging industrial power is a demanding exercise as it involves the combination of<br> cost effectiveness and efficiency along with producing world-class technology at the cutting edge.
-					              <br>For about five decades we have been doing it with sincerity and commitment at NIT Raipur.</p>
-                  </div>
-                  </div>
-                </div>
-                <hr class="line-primary">
-                <div class="card-footer text-center">
-                  <a href="http://www.nitrr.ac.in" target="_blank" class="btn btn-primary btn-simple">Contact</a>
-                </div>
+                  The Career Development Centre (CDC) is functioning under the leadership and guidance of<br> Prof.
+                  Samir Bajpai, an alumnus of NIT Raipur and IIT Kanpur.
+                  <br>He has given his services to the department of training & placement for over two decades.<br> Now,
+                  he continues to mentor the training and placement activities as Head, CDC.
+                  <br>He keenly looks forward to establish and steer a strong and symbiotic relationship<br> with the
+                  industries and the corporate world.
+                </p>
               </div>
             </div>
           </div>
+          <hr class="line-primary">
+          <div class="card-footer text-center">
+            <a href="http://cdc.nitrr.ac.in" target="_blank" class="btn btn-primary btn-simple">Contact</a>
+          </div>
         </div>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-md-12">
-              <div class="card card-coin card-plain">
-                <br><br><br><br><br><br>
-                <div class="card-header">
-                  <img src='{% static "assets/img/SBajpai.jpg" %}' class="img-center img-fluid">
-                </div>
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                      <h4 class="text-uppercase">Dr. Samir Bajpai</h4>
-                      <span>Career Development Cell (Head) - NIT Raipur</span>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                      <hr class="line-primary"><br>
-                    <p class="text-white h5">
-                            The Career Development Centre (CDC) is functioning under the leadership and guidance of<br> Prof. Samir Bajpai, an alumnus of NIT Raipur and IIT Kanpur.
-                        <br>He has given his services to the department of training & placement for over two decades.<br> Now, he continues to mentor the training and placement activities as Head, CDC.
-                        <br>He keenly looks forward to establish and steer a strong and symbiotic relationship<br> with the industries and the corporate world.</p>
-                    </div>
-                  </div>
-                </div>
-                <hr class="line-primary">
-                <div class="card-footer text-center">
-                  <a href="http://cdc.nitrr.ac.in" target="_blank" class="btn btn-primary btn-simple">Contact</a>
-                </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row row-grid justify-content-center">
+      <div class="col-md-12">
+        <div class="card card-coin card-plain">
+          <br><br><br><br><br><br>
+          <div class="card-header">
+            <img src='{% static "assets/img/FacultyInc.png" %}' class="img-center img-fluid">
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <h4 class="text-uppercase">Dr. Rajesh Doriya</h4>
+                <span>Faculty Incharge - ROBOTiX Club</span>
+
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <hr class="line-primary"><br>
+                <p class="text-white h5">
+                  The club ignites creativity and passion towards this promising and fast-developing area by
+                  organising<br> workshops throughout the academic session and events in the College's Technical Fest.
+                  <br>The club provides an ambience for students to prepare and to showcase their skills at robotics
+                  events held all across<br> India and Asia in various colleges with the aim to add more feathers in the
+                  cap.
+                  <br>The ultimate goal of ROBOTiX Club NIT Raipur is to educate more students and make robotics an
+                  everyday phenomenon.
+                </p>
               </div>
             </div>
           </div>
-        </div>
-        <div class="container">
-          <div class="row row-grid justify-content-center">
-            <div class="col-md-12">
-              <div class="card card-coin card-plain">
-                <br><br><br><br><br><br>
-                <div class="card-header">
-                  <img src='{% static "assets/img/FacultyInc.png" %}' class="img-center img-fluid">
-                </div>
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                      <h4 class="text-uppercase">Dr. Rajesh Doriya</h4>
-                      <span>Faculty Incharge - ROBOTiX Club</span>
-
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                        <hr class="line-primary"><br>
-                    <p class="text-white h5">
-                            The club ignites creativity and passion towards this promising and fast-developing area by organising<br> workshops throughout the academic session and events in the College's Technical Fest.
-                        <br>The club provides an ambience for students to prepare and to showcase their skills at robotics events held all across<br> India and Asia in various colleges with the aim to add more feathers in the cap.
-                        <br>The ultimate goal of ROBOTiX Club NIT Raipur is to educate more students and make robotics an everyday phenomenon.</p>
-                    </div>
-                  </div>
-                </div>
-                  <hr class="line-primary">
-                <div class="card-footer text-center">
-                  <a href="" target="_blank" class="btn btn-primary btn-simple">Contact</a>
-                </div>
-              </div>
-            </div>
+          <hr class="line-primary">
+          <div class="card-footer text-center">
+            <a href="" target="_blank" class="btn btn-primary btn-simple">Contact</a>
           </div>
         </div>
-      </section>
+      </div>
+    </div>
+  </div>
+</section>
 
 
-  <!--  <section class="section section-lg">
+<!--  <section class="section section-lg">
       <img src="assets/img/path2.png" class="path3">
     </section>-->
 
