--- a/templates/roboexpo.html
+++ b/templates/roboexpo.html
@@ -9,47 +9,66 @@ Robotix Club • RoboExpo
 <img src='{% static "assets/img/dots.png" %}' class="dots">
 <img src='{% static "assets/img/path4.png" %}' class="path">
 
-  <section class="section section-lg">
-      <section class="container"><br><br>
-         <div class="row"><br>
-            <div class="page-head-title">
-                <h5 class="page-title-sim">ROBOEXPO</h5>
-              </div><br>
-          <div class="col-lg-12 col-md-12"><br>
+<section class="section section-lg">
+  <section class="container"><br><br>
+    <div class="row"><br>
+      <div class="page-head-title">
+        <h5 class="page-title-sim">ROBOEXPO</h5>
+      </div><br>
+      <div class="col-lg-12 col-md-12"><br>
 
-                <h2 class="text-info"><strong>ROBO EXPO 3.0 ( 1 March )</strong></h2>
-                <p class="text-white h4">The Robo Expo 3.0 is an exhibition held to provide a glimpse of the future with robot technology incorporated in society.
-                  Examples of robot introduction being promoted by companies, organizations and various participating schools are displayed calling visitor’s attention to the future of robotics.
-                  Robots that have a potential to be employed in various industries such as manufacturing, health care, service robots and disaster management are displayed to open up the
-                   minds of the visitors to the endless use of Bots.<br>
-                For the purpose we would be inviting problem statements from participants themselves and faculties of NIT Raipur.
-                After proper validation and evaluation, we would shortlist the models that would be of considerable value to the society in modern times.
-                These models will then be clubbed into similar groups for the purpose of presentation.
-                Any and all doubts and queries regarding the models will be cleared by the club members and all possible assistance will be provided in order to make this venture successful.
-                </p><br><br>
-                <h3 class="text-info"><strong>Prize Money</strong></h3>
-                <ul class="text-white h4">
-                  <li><p class="text-white h4">First Prize - &#x20B9; 10000</p></li>
-                  <li><p class="text-white h4">Runner-Up - &#x20B9; 8000</p></li>
-                </ul>
-                <br>
-                <h3 class="text-info"><strong>Goals of RoboExpo</strong></h3>
-                <ol class="text-white h4">
-                  <li><p class="text-white h4">To bring out the best technologies and ideas in the field of robotics under one roof.</p></li>
-                  <li><p class="text-white h4">To widen the scope of current practices for a more varied problem set.</p></li>
-                  <li><p class="text-white h4">To provide a platform for budding ideas with technical help for their future applications.</p></li>
-                </ol>
-                <br>
-                <div align="center">
-                   <a type="button" href="{% url 'roboexpo:roboexpo-registration' %}" class="btn btn-info btn-round btn-lg">Register</a>
-                </div>
-                   <br><br>
-
-       </div>
-
+        <h2 class="text-info"><strong>ROBO EXPO 3.0 ( 1 March )</strong></h2>
+        <p class="text-white h4">The Robo Expo 3.0 is an exhibition held to provide a glimpse of the future with robot
+          technology incorporated in society.
+          Examples of robot introduction being promoted by companies, organizations and various participating schools
+          are displayed calling visitor’s attention to the future of robotics.
+          Robots that have a potential to be employed in various industries such as manufacturing, health care, service
+          robots and disaster management are displayed to open up the
+          minds of the visitors to the endless use of Bots.<br>
+          For the purpose we would be inviting problem statements from participants themselves and faculties of NIT
+          Raipur.
+          After proper validation and evaluation, we would shortlist the models that would be of considerable value to
+          the society in modern times.
+          These models will then be clubbed into similar groups for the purpose of presentation.
+          Any and all doubts and queries regarding the models will be cleared by the club members and all possible
+          assistance will be provided in order to make this venture successful.
+        </p><br><br>
+        <h3 class="text-info"><strong>Prize Money</strong></h3>
+        <ul class="text-white h4">
+          <li>
+            <p class="text-white h4">First Prize - &#x20B9; 10000</p>
+          </li>
+          <li>
+            <p class="text-white h4">Runner-Up - &#x20B9; 8000</p>
+          </li>
+        </ul>
+        <br>
+        <h3 class="text-info"><strong>Goals of RoboExpo</strong></h3>
+        <ol class="text-white h4">
+          <li>
+            <p class="text-white h4">To bring out the best technologies and ideas in the field of robotics under one
+              roof.</p>
+          </li>
+          <li>
+            <p class="text-white h4">To widen the scope of current practices for a more varied problem set.</p>
+          </li>
+          <li>
+            <p class="text-white h4">To provide a platform for budding ideas with technical help for their future
+              applications.</p>
+          </li>
+        </ol>
+        <br>
+        <div align="center">
+          <a type="button" href="{% url 'roboexpo:roboexpo-registration' %}"
+            class="btn btn-info btn-round btn-lg">Register</a>
         </div>
-      </section>
-    </section>
+        <br><br>
+
+      </div>
+
+    </div>
+  </section>
+</section>
 
 
 
