--- a/templates/robothon.html
+++ b/templates/robothon.html
@@ -6,61 +6,93 @@ Robotix Club • Robothon
 {% endblock %}
 
 {% block content %}
-    <img src='{% static "assets/img/dots.png" %}' class="dots">
-    <img src='{% static "assets/img/path4.png" %}' class="path">
+<img src='{% static "assets/img/dots.png" %}' class="dots">
+<img src='{% static "assets/img/path4.png" %}' class="path">
 
-  <section class="section section-lg">
-      <section class="container"><br><br>
-         <div class="row"><br>
-            <div class="page-head-title">
-                <h5 class="page-title-sim">ROBOTHON</h5>
-              </div><br>
-          <div class="col-lg-12 col-md-12"><br>
+<section class="section section-lg">
+  <section class="container"><br><br>
+    <div class="row"><br>
+      <div class="page-head-title">
+        <h5 class="page-title-sim">ROBOTHON</h5>
+      </div><br>
+      <div class="col-lg-12 col-md-12"><br>
 
-                <h2 class="text-info"><strong>The Ultimate Robotics Hackathon ( 29 Feb - 1 Mar )</strong></h2>
-                <p class="text-white h4">A Robothon is a Robotics Hackathon organized by <b>Robotix Club NIT Raipur</b>, for the sole purpose of bringing robotics enthusiasts together and discussing
-                  real life problems and their solution by creative ideas within a limited time frame by employing and enhancing technical skills that participants already have.
-                  It is all about robotics, automation and education.<br>
-                  The Robothon would be a <b>32 hour long challenge</b> where a number of problem statements would be launched prior to the event. The Problem statements would range from IOT projects to defense related problems.
-                  A team is allowed to select a problem of their choice and come up with a viable solution.<br>
-                  A team would consist of <b>6 students (irrespective of their branches)</b>, having the zeal and enthusiasm to build a robot capable of solving real-life problems.<br>
-                  The Robothon would be attended by students from top colleges across INDIA. Out of which we wish to accommodate 70% students from NIT Raipur itself and for the other 30% seats we plan to have participation from various IITs.<br>
-                </p><br><br>
-                <h3 class="text-info"><strong>Prize Money</strong></h3>
-                <ul class="text-white h4">
-                  <li><p class="text-white h4">First Prize - &#x20B9; 20000</p></li>
-                  <li><p class="text-white h4">Runner-Ups - &#x20B9; 15000</p></li>
-                </ul>
-                <br>
-                <h3 class="text-info"><strong>Goals of Robothon</strong></h3>
-                <ol class="text-white h4">
-                  <li><p class="text-white h4">Enhance the robotics knowledge in students of various branches.</p></li>
-                  <li><p class="text-white h4">Increasing the spirit of challenge in students.</p></li>
-                  <li><p class="text-white h4">Improving the technical skills in students.</p></li>
-                  <li><p class="text-white h4">Making students ready for industries.</p></li>
-                  <li><p class="text-white h4">Solving some Real-life problems.</p></li>
-                </ol>
-                <br>
-                <h3 class="text-info"><strong>Benefits of Robothon</strong></h3>
-                <ol class="text-white h4">
-                  <li><p class="text-white h4">Providing hands-on experience with the latest technology in robotics.</p></li>
-                  <li><p class="text-white h4">Academic Interaction within students.</p></li>
-                  <li><p class="text-white h4">Insights to industrial challenges and development of technical solutions.</p></li>
-                </ol>
-                <br>
-                <h3 class="text-info"><strong>Details of Robothon</strong></h3>
-                   <p class="text-white h4">It is a two day event consisting of two rounds.</p>
-                   <p class="text-white h4">First round is the abstract submission where pseudo problem statements  which will be based on local challenges will be given.
-                     Submit your  abstract and 18 most innovative solutions will be selected for second round and then create your bot within 24 hours.
-                     Use your basics of Robotics and innovate new things. Come in group of 5 to effectively use your brain as it is said five fingers when united makes a punch </p>
-                     <h4 class="text-info">Create/Join a team of 6/5 to participate.</h4>
+        <h2 class="text-info"><strong>The Ultimate Robotics Hackathon ( 29 Feb - 1 Mar )</strong></h2>
+        <p class="text-white h4">A Robothon is a Robotics Hackathon organized by <b>Robotix Club NIT Raipur</b>, for the
+          sole purpose of bringing robotics enthusiasts together and discussing
+          real life problems and their solution by creative ideas within a limited time frame by employing and enhancing
+          technical skills that participants already have.
+          It is all about robotics, automation and education.<br>
+          The Robothon would be a <b>32 hour long challenge</b> where a number of problem statements would be launched
+          prior to the event. The Problem statements would range from IOT projects to defense related problems.
+          A team is allowed to select a problem of their choice and come up with a viable solution.<br>
+          A team would consist of <b>6 students (irrespective of their branches)</b>, having the zeal and enthusiasm to
+          build a robot capable of solving real-life problems.<br>
+          The Robothon would be attended by students from top colleges across INDIA. Out of which we wish to accommodate
+          70% students from NIT Raipur itself and for the other 30% seats we plan to have participation from various
+          IITs.<br>
+        </p><br><br>
+        <h3 class="text-info"><strong>Prize Money</strong></h3>
+        <ul class="text-white h4">
+          <li>
+            <p class="text-white h4">First Prize - &#x20B9; 20000</p>
+          </li>
+          <li>
+            <p class="text-white h4">Runner-Ups - &#x20B9; 15000</p>
+          </li>
+        </ul>
+        <br>
+        <h3 class="text-info"><strong>Goals of Robothon</strong></h3>
+        <ol class="text-white h4">
+          <li>
+            <p class="text-white h4">Enhance the robotics knowledge in students of various branches.</p>
+          </li>
+          <li>
+            <p class="text-white h4">Increasing the spirit of challenge in students.</p>
+          </li>
+          <li>
+            <p class="text-white h4">Improving the technical skills in students.</p>
+          </li>
+          <li>
+            <p class="text-white h4">Making students ready for industries.</p>
+          </li>
+          <li>
+            <p class="text-white h4">Solving some Real-life problems.</p>
+          </li>
+        </ol>
+        <br>
+        <h3 class="text-info"><strong>Benefits of Robothon</strong></h3>
+        <ol class="text-white h4">
+          <li>
+            <p class="text-white h4">Providing hands-on experience with the latest technology in robotics.</p>
+          </li>
+          <li>
+            <p class="text-white h4">Academic Interaction within students.</p>
+          </li>
+          <li>
+            <p class="text-white h4">Insights to industrial challenges and development of technical solutions.</p>
+          </li>
+        </ol>
+        <br>
+        <h3 class="text-info"><strong>Details of Robothon</strong></h3>
+        <p class="text-white h4">It is a two day event consisting of two rounds.</p>
+        <p class="text-white h4">First round is the abstract submission where pseudo problem statements which will be
+          based on local challenges will be given.
+          Submit your abstract and 18 most innovative solutions will be selected for second round and then create your
+          bot within 24 hours.
+          Use your basics of Robotics and innovate new things. Come in group of 5 to effectively use your brain as it is
+          said five fingers when united makes a punch </p>
+        <h4 class="text-info">Create/Join a team of 6/5 to participate.</h4>
 
-                     <a type="button" href="{% url 'robothon:home' %}" class="btn btn-info btn-round btn-sm">Create Team</a>  <span class="text-white"> OR </span>  <a type="button" href="{% url 'robothon:home' %}" class="btn btn-info btn-round btn-sm">Join Team</a>
-                     <p class="text-white h5">Note: The team should be created by Team Leader and other members should join that team.</p>
+        <a type="button" href="{% url 'robothon:home' %}" class="btn btn-info btn-round btn-sm">Create Team</a> <span
+          class="text-white"> OR </span> <a type="button" href="{% url 'robothon:home' %}"
+          class="btn btn-info btn-round btn-sm">Join Team</a>
+        <p class="text-white h5">Note: The team should be created by Team Leader and other members should join that
+          team.</p>
 
-       </div>
+      </div>
 
-        </div>
-      </section>
-    </section>
+    </div>
+  </section>
+</section>
 {% endblock %}
