--- a/templates/diy.html
+++ b/templates/diy.html
@@ -7,35 +7,37 @@ Robotix Club • DIY
 
 {% block content %}
 <img src='{% static "assets/img/dots.png" %}' class="dots">
-  <img src='{% static "assets/img/path4.png" %}' class="path">
+<img src='{% static "assets/img/path4.png" %}' class="path">
 
-  <section class="section section-lg">
-	  <section class="container"><br><br>
+<section class="section section-lg">
+  <section class="container"><br><br>
 
-         <div class="row"><br>
-            <div class="page-head-title">
-             <h5 class="page-title-sim">Do It Yourself</h5>
-			</div>
-			{% for diy in diy %}
-            <div class="col-lg-12 col-md-12 text-center"><br>
-              <h2 class="text-warning"><strong>{{diy.title}}</strong></h2>
-            </div>
-			<div class="col-lg-6 col-md-6"><br>
-					<img height=200 width=330 src="{{diy.photo.url}}" alt="showcase image">
-            </div>
-            <div class="col-lg-6 col-md-6"><br>
-              <div class="card card-coin card-warning">
-              <div class="card-body">
-				  <p class="text-white h5 text-center">{{diy.desc}}</p>
-				  <p style="color:#ffffff;"><b><span class="color">Mentor: </span>{{diy.mentor}}</b><br><b><span class="color">Members: </span>{{diy.members}}</b><br></p>
-				  <h3 style="text-align:center;"><a style="color:inherit;text-decoration:none;" href='{{diy.file.url}}' title="{{diy.title}}" download><span class="color">Download the PDF</span></a></h3>
-				</div>
-              </div>
-		  </div>
-		  {% endfor %}
-         </div>
+    <div class="row"><br>
+      <div class="page-head-title">
+        <h5 class="page-title-sim">Do It Yourself</h5>
+      </div>
+      {% for diy in diy %}
+      <div class="col-lg-12 col-md-12 text-center"><br>
+        <h2 class="text-warning"><strong>{{diy.title}}</strong></h2>
+      </div>
+      <div class="col-lg-6 col-md-6"><br>
+        <img height=200 width=330 src="{{diy.photo.url}}" alt="showcase image">
+      </div>
+      <div class="col-lg-6 col-md-6"><br>
+        <div class="card card-coin card-warning">
+          <div class="card-body">
+            <p class="text-white h5 text-center">{{diy.desc}}</p>
+            <p style="color:#ffffff;"><b><span class="color">Mentor: </span>{{diy.mentor}}</b><br><b><span
+                  class="color">Members: </span>{{diy.members}}</b><br></p>
+            <h3 style="text-align:center;"><a style="color:inherit;text-decoration:none;" href='{{diy.file.url}}'
+                title="{{diy.title}}" download><span class="color">Download the PDF</span></a></h3>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
 
-      </section>
-    </section>
+  </section>
+</section>
 
 {% endblock %}
