--- a/templates/login-page.html
+++ b/templates/login-page.html
@@ -20,19 +20,20 @@ ROBOTiX Club • LogIn
               <form name="myform" action="" method="POST">
                 <h4 class="text-danger">{{msg}}</h4>
                 {% csrf_token %}
-              <div class="card card-register" >
-                <div class="card-header">
-                  <img class="card-img" src='{% static "assets/img/square1.png" %}' alt="Card image">
-                  <h4 class="card-title" style="color:#dadada">&nbsp;LogIn</h4>
-                </div>
-                <div class="card-body">
+                <div class="card card-register">
+                  <div class="card-header">
+                    <img class="card-img" src='{% static "assets/img/square1.png" %}' alt="Card image">
+                    <h4 class="card-title" style="color:#dadada">&nbsp;LogIn</h4>
+                  </div>
+                  <div class="card-body">
                     <div id="userid" class="input-group">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
                           <i class="mrao-icons icon-single-02"></i>
                         </div>
                       </div>
-                      <input type="email" name='email' class="form-control" id="username" placeholder="Registered Email-ID" required>
+                      <input type="email" name='email' class="form-control" id="username"
+                        placeholder="Registered Email-ID" required>
                     </div>
                     <div id="passid" class="input-group">
                       <div class="input-group-prepend">
@@ -40,7 +41,8 @@ ROBOTiX Club • LogIn
                           <i class="mrao-icons icon-lock-circle"></i>
                         </div>
                       </div>
-                      <input type="password" id="txtPassword" name='password' class="form-control" placeholder="Password"  required>
+                      <input type="password" id="txtPassword" name='password' class="form-control"
+                        placeholder="Password" required>
                     </div>
 
                     <div class="form-check text-left">
@@ -52,31 +54,31 @@ ROBOTiX Club • LogIn
                     </div>
 
                     <script type="text/javascript">
-                                  function showPass()
-                                  {
-                                     var showp = document.getElementById("txtPassword");
+                      function showPass() {
+                        var showp = document.getElementById("txtPassword");
 
-                                       if (showp.type === "password")
-                                       {
-                                         showp.type = "text";
+                        if (showp.type === "password") {
+                          showp.type = "text";
 
-                                       }
-                                       else
-                                       {
-                                         showp.type = "password";
+                        }
+                        else {
+                          showp.type = "password";
 
-                                       }
-                                 }
+                        }
+                      }
                     </script>
 
+                  </div>
+                  <div class="card-footer">
+                    <button type="submit" name='login' onclick="" href=""
+                      class="btn btn-info btn-round btn-lg">Log-In</button>&nbsp;
+                    <a href="{% url 'users:forget-pass' %}" type="submit" onclick="" href=""
+                      class="btn btn-info btn-round btn-lg">Forgot Password</a>
+                    <a href="{% url 'users:account_signup' %}" type="submit" onclick="" href=""
+                      class="btn btn-info btn-round btn-lg">Sign Up</a>
+                  </div>
                 </div>
-                <div class="card-footer">
-                  <button type="submit" name='login' onclick="" href="" class="btn btn-info btn-round btn-lg">Log-In</button>&nbsp;
-                  <a href="{% url 'users:forget-pass' %}" type="submit" onclick="" href="" class="btn btn-info btn-round btn-lg">Forgot Password</a>
-                  <a href="{% url 'users:account_signup' %}" type="submit" onclick="" href="" class="btn btn-info btn-round btn-lg">Sign Up</a>
-                </div>
-              </div>
-            </form>
+              </form>
 
             </div>
           </div>
@@ -90,7 +92,7 @@ ROBOTiX Club • LogIn
         </div>
       </div>
     </div>
-    </div>
   </div>
+</div>
 
-    {% endblock %}
+{% endblock %}
